# busca-eventos-rio

./: .dockerignore  .env.example  .gitignore  .railwayignore  ANALISE_PROMPTS_PRODUCAO.md  ANALISE_QUALIDADE_EVENTOS.md  Dockerfile  GUIA_ANALISE.md  LIMITACOES.md  MELHORIAS_PRIORIDADE_MAXIMA.md  PR_DESCRIPTION.md  Procfile  README.md  RECOMENDACOES_MELHORIA_BUSCAS.md  ROADMAP_MELHORIAS.md  WEB_README.md  analyze_production_events.py  check_production_logs.py  config.py  install.sh  main.py  nixpacks.toml  pyproject.toml  railway.json  run_diariodorio_crawler.py  run_judge_production.py  start_web.sh  test_artemis_cafe.py  test_artemis_perplexity.py  test_blue_note_scraper.py  test_ccbb_scraper.py  test_cecilia_scraper.py  test_date_filter.py  test_date_interpolation.py  test_minimal_request.py  test_new_key.py  test_retry_agent_fix.py  test_saturday_logic.py  test_search_agent_artemis.py  test_spa_link.py  (+4 more)
.claude/: settings.local.json
agents/: __init__.py  base_agent.py  enrichment_agent.py  format_agent.py  judge_agent.py  retry_agent.py  search_agent.py  search_agent.py.before_micro_searches  search_agent.py.before_micro_searches_dry  title_enhancement_agent.py  validation_agent.py  verify_agent.py
archive/: analyze_metadata.py  test_sonar_comparison.py
crawlers/: __init__.py  diariodorio_crawler.py
evals/: README.md  __init__.py  eval_search.py
models/: __init__.py  event_models.py
prompts/: search_prompts.yaml
tools/: __init__.py
utils/: agent_factory.py  category_registry.py  config_loader.py  continuous_event_handler.py  date_helpers.py  (+21 more)
(+9 files in other folders)
